<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">Login</string>
    <string name="username_label">Username</string>
    <string name="username_hint_text">Enter username</string>
    <string name="password_label">Password</string>
    <string name="password_hint_text">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">New User? Sign Up</string>
</resources>
